# bigbrother

./: Cargo.toml  README.md
.claude/agents/: discord-analyzer.md  feedback-extractor.md  user-pain-miner.md
.pi/: AGENTS.md
.pi/agents/: ORCHESTRATOR.md
.pi/skills/agent-monitor/: SKILL.md
.pi/skills/pi-session-reader/: SKILL.md
.pi/skills/wezterm-orchestrator/: SKILL.md
crates/bb/src/: main.rs
crates/bigbrother/: Cargo.toml  README.md
crates/bigbrother-core/: Cargo.toml
crates/bigbrother-core/src/: input.rs  lib.rs  locator.rs
crates/bigbrother-core/src/platform/windows/: accessibility.rs  input.rs  mod.rs
crates/bigbrother-recorder/: Cargo.toml
crates/bigbrother-recorder/src/: lib.rs
crates/bigbrother-recorder/src/platform/windows/: mod.rs  recorder.rs  replay.rs
crates/bigbrother/src/: lib.rs
crates/workflow-recorder/: Cargo.toml  README.md
crates/workflow-recorder/src/: events.rs  lib.rs  recorder.rs
examples/: discord_scrape.rs
src/: error.rs  lib.rs  main.rs
