[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/louis030195/bigbrother"

[workspace.dependencies]
# Internal crates
bigbrother = { path = "crates/bigbrother" }
bigbrother-core = { path = "crates/bigbrother-core" }
bigbrother-recorder = { path = "crates/bigbrother-recorder" }

# External dependencies
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
ctrlc = "3.4"
libc = "0.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Platform-specific - macOS
[workspace.dependencies.cidre]
version = "0.13"
features = ["ax", "cg", "blocks", "ns", "app"]

# Platform-specific - Windows
[workspace.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_ToolHelp",
]

[workspace.dependencies.rdev]
version = "0.5"
